feat: avoid hard dependency on sun.misc.Unsafe for proxy allocation in ComponentProxy